--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<a href="{{ url_for("list_of_readers") }}">list_of_readers</a>
+<a href="{{ url_for("search") }}">search</a>
 </body>
 </html>
