--- a/templates/list of readers.html
+++ b/templates/list of readers.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="../static/list%20of%20readers.css">
 </head>
 <body>
-$END$
+<h1>List of readers</h1>
+
+<div class="main">
+    <div class="box">
+        <h1>Name</h1>
+        <h1>Surname</h1>
+        <h1>Age</h1>
+        <h1>Attendance</h1>
+        <h1>Score</h1>
+        <h1>id</h1>
+    </div>
+    {% for data in schools.schools %}
+        <div class="students">
+            <h3>{{ data.name }}</h3>
+            <h3>{{ data.surname }}</h3>
+            <h3>{{ data.age }}</h3>
+            <h3>{{ data.attendance }}</h3>
+            <h3>{{ data.score }}</h3>
+            <h3>{{ data.id }}</h3>
+        </div>
+    {% endfor %}
+</div>
 </body>
 </html>
